--- a/src/styles/components/sidebar.sass
+++ b/src/styles/components/sidebar.sass
@@ -27,9 +27,31 @@
         margin-top: 8rem
         padding: .8rem 1.2rem
     
+    .pokes-list
+        display: flex
+        flex-direction: column
+        justify-content: space-between
+        margin: 1.8rem
+        
     p
+        font: variables.$font-stack
         margin: 1rem
+        font-size: 1.5rem
+        color: variables.$text-color
     
+    .icons
+        padding: .6rem
+        margin: 1rem
+        background-color: variables.$bg-color-secondary
+        border-radius: variables.$card-border-radius
+        color: #333
+        font-size: 1.3rem
+        @include mixins.center
+
+        :hover
+            transition: 0.6s
+            color: variables.$text-color
+
     .btn
         @include mixins.btn
         
